<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.graphics.Color"/>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.demo.lloydstest.view.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.HomeFragment"
        android:background="@color/white">
        <TextView
            android:id="@+id/sync_code"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple"
            android:padding="15dp"
            android:drawablePadding="5dp"
            android:text="@string/code_sync"
            android:textStyle="bold"
            android:src="@drawable/ic_sync"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableEndCompat="@drawable/ic_sync" />
        <TextView
            android:id="@+id/text"
            style="@style/HeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp"
            android:gravity="center_horizontal"
            android:background="@color/purple"
            android:text="@string/phone_number_verify"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/lbl_code"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center_horizontal"
            android:text="@string/select_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text" />
       <Spinner
           android:id="@+id/spinner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_marginHorizontal="40dp"
           app:layout_constraintTop_toBottomOf="@+id/lbl_code"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/lbl_phone_number"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/number"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:layout_marginHorizontal="40dp"
            android:inputType="number"
            android:hint="@string/dummy_number"
            android:focusable="true"
            android:background="@drawable/custom_edit_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_phone_number"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/valid"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/valid"
            android:layout_marginTop="35dp"
            android:padding="15dp"
            android:backgroundTint="@color/purple"
            android:layout_marginHorizontal="70dp"
            app:layout_constraintTop_toBottomOf="@+id/number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/valid_message"
            style="@style/ValueStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valid"
            tools:text="Phone number is valid"/>

        <TextView
            android:id="@+id/lbl"
            style="@style/LabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="40dp"
            android:visibility="gone"
            android:text="@string/phone_number_info"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valid_message" />

        <TextView
            android:id="@+id/country_name"
            style="@style/ValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl"
            tools:text="India"/>

        <TextView
            android:id="@+id/international_format"
            style="@style/ValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_name"
            tools:text="+919773523570"/>


        <TextView
            android:id="@+id/carrier"
            style="@style/ValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/international_format"
            tools:text="Carrier: Bharti Airtel Ltd"/>

        <TextView
            android:id="@+id/location"
            style="@style/ValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carrier"
            tools:text="Location: Mumbai"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>